navbar andf header text, img edit

--- a/index.html
+++ b/index.html
@@ -7,35 +7,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
     <title>Manqal</title>
 </head>
 
-
-
-
 <body>
     <header>
-        <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar fixed-top navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#"><img src="./img/Group 571.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+                    <i class="fa-solid fa-bars"></i>
         </button>
-
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#">Ana Səhifə <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" href="#">Haqqımızda</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Menyu</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Əlaqə</a>
                         </li>
                     </ul>
-
+                    <div class="right-col">
+                        <a href="#" class="social"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="#" class="social"><i class="fa-brands fa-instagram"></i></a>
+                        <div class="dropdown down2">
+                            <a href="#" class="az">Az<i class="fa-solid fa-chevron-down dropbtn dropbtn-2"></i></a>
+                            <div id="myDropdown" class="dropdown-content dropdown-content-2">
+                                <a href="#" class="rus">Rus</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
+    <main>
+        <section id="header-text-img">
+            <div class="header-text">
+                <h1>Ləziz təamlar <br> ilə gününüzdə <br> dad qatın!</h1>
+                <a href="#"><img src="./img/Group 87.png" alt="">‘dan</a>
+            </div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/main.js"></script>
