--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <a class="nav-link" href="#">Haqqımızda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Menyu</a>
+                            <a class="nav-link" href="#menyu">Menyu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Əlaqə</a>
@@ -53,6 +53,74 @@
             <div class="header-text">
                 <h1>Ləziz təamlar <br> ilə gününüzdə <br> dad qatın!</h1>
                 <a href="#"><img src="./img/Group 87.png" alt="">‘dan</a>
+            </div>
+        </section>
+        <section id="menyu">
+            <div class="menyu-head">
+                <h1>Menyu</h1>
+            </div>
+
+            <div class="menyu-container">
+                <div class="menu-item">
+                    <div class="menyu-text">
+                        <h4>Çörəkdə Dönər </h4>
+                        <h5>12 ₼</h5>
+                        <p>Spread over two interconnected buildings, Le Mirabeau offers 30 double, and 5 single rooms as well </p>
+                    </div>
+                    <div class="menyu-img">
+                        <img src="./img/image 20.png" alt="">
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menyu-text">
+                        <h4>Çörəkdə Dönər </h4>
+                        <h5>12 ₼</h5>
+                        <p>Spread over two interconnected buildings, Le Mirabeau offers 30 double, and 5 single rooms as well </p>
+                    </div>
+                    <div class="menyu-img">
+                        <img src="./img/pngwing 2.png" alt="">
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menyu-text">
+                        <h4>Çörəkdə Dönər </h4>
+                        <h5>12 ₼</h5>
+                        <p>Spread over two interconnected buildings, Le Mirabeau offers 30 double, and 5 single rooms as well </p>
+                    </div>
+                    <div class="menyu-img">
+                        <img src="./img/image 22.png" alt="">
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menyu-text">
+                        <h4>Çörəkdə Dönər </h4>
+                        <h5>12 ₼</h5>
+                        <p>Spread over two interconnected buildings, Le Mirabeau offers 30 double, and 5 single rooms as well </p>
+                    </div>
+                    <div class="menyu-img">
+                        <img src="./img/image 23.png" alt="">
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menyu-text">
+                        <h4>Çörəkdə Dönər </h4>
+                        <h5>12 ₼</h5>
+                        <p>Spread over two interconnected buildings, Le Mirabeau offers 30 double, and 5 single rooms as well </p>
+                    </div>
+                    <div class="menyu-img">
+                        <img src="./img/image 22.png" alt="">
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <div class="menyu-text">
+                        <h4>Çörəkdə Dönər </h4>
+                        <h5>12 ₼</h5>
+                        <p>Spread over two interconnected buildings, Le Mirabeau offers 30 double, and 5 single rooms as well </p>
+                    </div>
+                    <div class="menyu-img">
+                        <img src="./img/pngwing 2.png" alt="">
+                    </div>
+                </div>
             </div>
         </section>
     </main>
