menyu edit and modal

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
 
             <div class="menyu-container">
-                <div class="menu-item">
+                <div class="menu-item" data-name="p-1">
                     <div class="menyu-text">
                         <h4>Çörəkdə Dönər </h4>
                         <h5>12 ₼</h5>
@@ -71,7 +71,7 @@
                         <img src="./img/image 20.png" alt="">
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item" data-name="p-2">
                     <div class="menyu-text">
                         <h4>Çörəkdə Dönər </h4>
                         <h5>12 ₼</h5>
@@ -81,7 +81,7 @@
                         <img src="./img/pngwing 2.png" alt="">
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item" data-name="p-3">
                     <div class="menyu-text">
                         <h4>Çörəkdə Dönər </h4>
                         <h5>12 ₼</h5>
@@ -91,7 +91,7 @@
                         <img src="./img/image 22.png" alt="">
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item" data-name="p-4">
                     <div class="menyu-text">
                         <h4>Çörəkdə Dönər </h4>
                         <h5>12 ₼</h5>
@@ -101,7 +101,7 @@
                         <img src="./img/image 23.png" alt="">
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item" data-name="p-5">
                     <div class="menyu-text">
                         <h4>Çörəkdə Dönər </h4>
                         <h5>12 ₼</h5>
@@ -111,7 +111,7 @@
                         <img src="./img/image 22.png" alt="">
                     </div>
                 </div>
-                <div class="menu-item">
+                <div class="menu-item" data-name="p-6">
                     <div class="menyu-text">
                         <h4>Çörəkdə Dönər </h4>
                         <h5>12 ₼</h5>
@@ -121,6 +121,112 @@
                         <img src="./img/pngwing 2.png" alt="">
                     </div>
                 </div>
+            </div>
+
+            <div class="products-preview">
+
+                <div class="preview" data-target="p-1">
+                    <i class="fas fa-times"></i>
+                    <div class="products-card">
+                        <img src="./img/image 20.png" alt="">
+                        <div class="products-card-text">
+                            <div class="menyu-text">
+                                <div class="card-prices">
+                                    <h4>Çörəkdə Dönər</h4>
+                                    <h5>12 ₼</h5>
+                                </div>
+                                <p>Buratta, rukola, pomidor, qırmızı turp, balzamik sous, qırmızı soğan, pesto rosso sousu
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="preview" data-target="p-2">
+                    <i class="fas fa-times"></i>
+                    <div class="products-card">
+                        <img src="./img/pngwing 2.png" alt="">
+                        <div class="products-card-text">
+                            <div class="menyu-text">
+                                <div class="card-prices">
+                                    <h4>Çörəkdə Dönər</h4>
+                                    <h5>12 ₼</h5>
+                                </div>
+                                <p>Buratta, rukola, pomidor, qırmızı turp, balzamik sous, qırmızı soğan, pesto rosso sousu
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="preview" data-target="p-3">
+                    <i class="fas fa-times"></i>
+                    <div class="products-card">
+                        <img src="./img/image 22.png" alt="">
+                        <div class="products-card-text">
+                            <div class="menyu-text">
+                                <div class="card-prices">
+                                    <h4>Çörəkdə Dönər</h4>
+                                    <h5>12 ₼</h5>
+                                </div>
+                                <p>Buratta, rukola, pomidor, qırmızı turp, balzamik sous, qırmızı soğan, pesto rosso sousu
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="preview" data-target="p-4">
+                    <i class="fas fa-times"></i>
+                    <div class="products-card">
+                        <img src="./img/image 23.png" alt="">
+                        <div class="products-card-text">
+                            <div class="menyu-text">
+                                <div class="card-prices">
+                                    <h4>Çörəkdə Dönər</h4>
+                                    <h5>12 ₼</h5>
+                                </div>
+                                <p>Buratta, rukola, pomidor, qırmızı turp, balzamik sous, qırmızı soğan, pesto rosso sousu
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="preview" data-target="p-5">
+                    <i class="fas fa-times"></i>
+                    <div class="products-card">
+                        <img src="./img/image 22.png" alt="">
+                        <div class="products-card-text">
+                            <div class="menyu-text">
+                                <div class="card-prices">
+                                    <h4>Çörəkdə Dönər</h4>
+                                    <h5>12 ₼</h5>
+                                </div>
+                                <p>Buratta, rukola, pomidor, qırmızı turp, balzamik sous, qırmızı soğan, pesto rosso sousu
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="preview" data-target="p-6">
+                    <i class="fas fa-times"></i>
+                    <div class="products-card">
+                        <img src="./img/pngwing 2.png" alt="">
+                        <div class="products-card-text">
+                            <div class="menyu-text">
+                                <div class="card-prices">
+                                    <h4>Çörəkdə Dönər</h4>
+                                    <h5>12 ₼</h5>
+                                </div>
+                                <p>Buratta, rukola, pomidor, qırmızı turp, balzamik sous, qırmızı soğan, pesto rosso sousu
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
     </main>
