--- a/index.html
+++ b/index.html
@@ -35,14 +35,8 @@
                         </li>
                     </ul>
                     <div class="right-col">
-                        <a href="#" class="social"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="#" class="social"><i class="fa-brands fa-instagram"></i></a>
-                        <div class="dropdown down2">
-                            <a href="#" class="az">Az<i class="fa-solid fa-chevron-down dropbtn dropbtn-2"></i></a>
-                            <div id="myDropdown" class="dropdown-content dropdown-content-2">
-                                <a href="#" class="rus">Rus</a>
-                            </div>
-                        </div>
+                        <a href="https://l24.im/s5UxG" class="social" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://l24.im/djb8Ff" target="_blank" class="social"><i class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -122,9 +116,7 @@
                     </div>
                 </div>
             </div>
-
             <div class="products-preview">
-
                 <div class="preview" data-target="p-1">
                     <i class="fas fa-times"></i>
                     <div class="products-card">
@@ -141,7 +133,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="preview" data-target="p-2">
                     <i class="fas fa-times"></i>
                     <div class="products-card">
@@ -158,7 +149,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="preview" data-target="p-3">
                     <i class="fas fa-times"></i>
                     <div class="products-card">
@@ -175,7 +165,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="preview" data-target="p-4">
                     <i class="fas fa-times"></i>
                     <div class="products-card">
@@ -192,7 +181,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="preview" data-target="p-5">
                     <i class="fas fa-times"></i>
                     <div class="products-card">
@@ -209,7 +197,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="preview" data-target="p-6">
                     <i class="fas fa-times"></i>
                     <div class="products-card">
@@ -226,8 +213,22 @@
                         </div>
                     </div>
                 </div>
-
             </div>
+        </section>
+
+        <section id="vidoe">
+            <div class="video-bg">
+                <img src="./img/Rectangle 324.png" alt="" class="img1">
+                <img src="./img/Group 42.png" alt="" class="img2">
+                <div class="vidoe-container">
+                    <div class="video-player">
+                        <i class="fa-solid fa-xmark closevideo"></i>
+                        <video src="./img/manqal-video.mp4" controls autoplay></video>
+
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
