--- a/index.html
+++ b/index.html
@@ -223,8 +223,7 @@
                 <div class="vidoe-container">
                     <div class="video-player">
                         <i class="fa-solid fa-xmark closevideo"></i>
-                        <video src="./img/manqal-video.mp4" controls autoplay></video>
-
+                        <video src="./img/Pexels Videos 1321208.mp4" controls autoplay class="manqal-video"></video>
                     </div>
                 </div>
             </div>
