--- a/index.html
+++ b/index.html
@@ -215,7 +215,6 @@
                 </div>
             </div>
         </section>
-
         <section id="vidoe">
             <div class="video-bg">
                 <img src="./img/Rectangle 324.png" alt="" class="img1">
@@ -228,6 +227,25 @@
                 </div>
             </div>
 
+        </section>
+        <section id="about">
+            <div class="container">
+                <div class="about-container">
+                    <div class="about-text">
+                        <h1>Haqqımızda</h1>
+                        <p>Spread over two interconnected buildings, Le Mirabeau offers 30 double, and 5 single rooms as well as 36 suites and junior suites. Families can enjoy some privacy thanks to interconnecting rooms or in our generous Family Suite
+                            with Matterhorn view on the top floor. Since our last renovation in 2018, all of our rooms feature elegant wooden parquet flooring. From the balconies, stunning mountain views can be enjoyed, and many of our rooms and suites
+                            offer stunning views of the Matterhorn. All of our accommodation options comprise luxury amenities such as tea & coffee makers, minibars, flat screen televisions, fluffy bathrobes and slippers, hair dryers, and exclusive Pure
+                            Altitude toiletries.</p>
+                        <a href="#"><img src="./img/Rectangle 43.png" alt=""></a>
+                        <a href="#"><img src="./img/Şanlıurfa logo.png" alt=""></a>
+                    </div>
+                    <div class="about-img">
+                        <img src="./img/image 11.png" alt="">
+                        <img src="./img/image 12.png" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
