--- a/index.html
+++ b/index.html
@@ -18,25 +18,27 @@
                 <a class="navbar-brand" href="#"><img src="./img/Group 571.png" alt=""></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <i class="fa-solid fa-bars"></i>
-        </button>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Ana Səhifə <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Haqqımızda</a>
+                            <a class="nav-link" href="#menyu">Menyu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#menyu">Menyu</a>
+                            <a class="nav-link" href="#about"> Haqqımızda</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Əlaqə</a>
                         </li>
                     </ul>
                     <div class="right-col">
-                        <a href="https://l24.im/s5UxG" class="social" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                        <a href="https://l24.im/djb8Ff" target="_blank" class="social"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://l24.im/s5UxG" class="social" target="_blank"><i
+                                class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://l24.im/djb8Ff" target="_blank" class="social"><i
+                                class="fa-brands fa-instagram"></i></a>
                     </div>
                 </div>
             </div>
@@ -243,6 +245,26 @@
                     <div class="about-img">
                         <img src="./img/image 11.png" alt="">
                         <img src="./img/image 12.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="elaqe">
+            <div class="container">
+                <div class="elaqe-container">
+                    <div class="map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1129.4971390084243!2d49.95248340854771!3d40.394891091047356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x403063126380cbb3%3A0xf145c3676409845e!2zSGF0YWksIEJha8O8LCBCYWvDvCwgQXplcmJheWNhbg!5e0!3m2!1str!2s!4v1661717169808!5m2!1str!2s"
+                            width="395.49" height="467" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                    <div class="form-g">
+                        <h1>Əlaqə Formu</h1>
+                        <form action="#">
+                            <input type="text" name="name" id="name" placeholder="Ad" required>
+                            <input type="text" name="surname" id="surname" placeholder="Soyad" required><br>
+                            <input type="email" name="surname" id="surname" class="input-bottom" placeholder="Email Adress" required><br>
+                            <input type="tel" id="phone" name="phone" class="input-bottom" placeholder="Mobile Number" required><br>
+                            <button type="submit" class="form-btn">Göndər</button>
+                        </form>
                     </div>
                 </div>
             </div>
