--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="#about"> Haqqımızda</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Əlaqə</a>
+                            <a class="nav-link" href="#elaqe">Əlaqə</a>
                         </li>
                     </ul>
                     <div class="right-col">
@@ -262,7 +262,7 @@
                             <input type="text" name="name" id="name" placeholder="Ad" required>
                             <input type="text" name="surname" id="surname" placeholder="Soyad" required><br>
                             <input type="email" name="surname" id="surname" class="input-bottom" placeholder="Email Adress" required><br>
-                            <input type="tel" id="phone" name="phone" class="input-bottom" placeholder="Mobile Number" required><br>
+                            <input type="tel" id="phone" name="phone" class="input-bottom" placeholder="Mobil Nömrə" required><br>
                             <button type="submit" class="form-btn">Göndər</button>
                         </form>
                     </div>
