--- a/index.html
+++ b/index.html
@@ -270,6 +270,71 @@
             </div>
         </section>
     </main>
+
+    <footer class="mainfooter" role="contentinfo">
+        <div class="footer-middle">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <a class="navbar-brand" href="#"><img src="./img/image 10.png" alt=""></a>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <h4> Ünvan </h4>
+                        <div class="footer-pad">
+                            <p>Mehemmed Hadi ve Xudu Memmedov küçelerinin kesişmesi</p>
+                        </div>
+                        <div class="right-col">
+                            <a href="https://l24.im/s5UxG" class="social" target="_blank"><i
+                                        class="fa-brands fa-facebook-f"></i></a>
+                            <a href="https://l24.im/djb8Ff" target="_blank" class="social"><i
+                                        class="fa-brands fa-instagram"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 col-sm-6 elaqe-link">
+                        <div class="footer-pad">
+                            <h4>Əlaqə</h4>
+                            <ul class="list-unstyled">
+                                <li>
+                                    <a target="_blank" class="elaqe-text" href="tel:+99412571493"> +994 12 571 49 39 </a>
+                                </li>
+                                <li>
+                                    <a target="_blank" class="elaqe-text" href="tel:+994705714939">+994 70 571 49 39</a>
+                                </li>
+
+
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3 kecid">
+                        <div class="footer-pad">
+                            <h4>Keçitlər</h4>
+                            <ul class="list-unstyled">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">Ana Səhifə <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#menyu">Menyu</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#about"> Haqqımızda</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#elaqe">Əlaqə</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="copy">
+                    <p class="text-center"> Copyright © 2022. Bütün hüquqlar qorunur
+                    </p>
+                    <a href="https://thejavachip.com/" target="_blank">Design by<img src="./img/image 31.png" alt="">JavaChip</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="./js/main.js"></script>
