footer small edit

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <div class="copy">
                     <p class="text-center"> Copyright © 2022. Bütün hüquqlar qorunur
                     </p>
-                    <a href="https://thejavachip.com/" target="_blank">Design by<img src="./img/image 31.png" alt="">JavaChip</a>
+                    <a href="https://thejavachip.com/" target="_blank">Tərəfindən yaradılmışdır<img src="./img/javachip-logo-footer.svg" alt=""></a>
                 </div>
             </div>
         </div>
