--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 <div class="copy">
                     <p class="text-center"> Copyright © 2022. Bütün hüquqlar qorunur
                     </p>
-                    <a href="https://thejavachip.com/" target="_blank">Tərəfindən yaradılmışdır<img src="./img/javachip-logo-footer.svg" alt=""></a>
+                    <a href="https://thejavachip.com/" target="_blank"><img src="./img/javachip-logo-footer.svg" alt="">Tərəfindən yaradılmışdır</a>
                 </div>
             </div>
         </div>
